Test with XBee sleep and CONFIG message ok

--- a/ControlNode/Collector/clen_collector.cfg
+++ b/ControlNode/Collector/clen_collector.cfg
@@ -3,13 +3,19 @@
 
 [main]
 ; The measures time granularity in seconds
-;time_interval=900
-time_interval=30
+;time_interval=60
 ; The max expected number of sensors in range
 ;max_sensor_nodes=30
 max_sensor_nodes=3
 ;the serial Baud rate - mandatory
 serial_baud_rate=9600
+
+[rrd]
+; The RRD database base dir
+;rrd_base_dir=/var/opt/clensensors
+; The time length of the base data kept in the RRD
+; Stored data timespan will be = rrd_length * time_interval
+;rrd_length=10080
 
 [rest]
 ; the REST API server. 
