Lab integration test changes

--- a/ControlNode/Collector/clen_transcalibration.cfg
+++ b/ControlNode/Collector/clen_transcalibration.cfg
@@ -8,6 +8,24 @@
 ;
 ;NOTE: non ASCII, national characters in the strings below are not yet supported, sorry!
 ;
-002,Batteria S.002,20,Tens,V,0,0.01386
-002,Serbatoio 1,04,Temp,Celsius,0,1
-002,Serbatoio 1,05,Umidita,%,0,1
+002,Batteria P.002,20,Tens,V,0,14.76
+002,Punto 2-s1,04,Temp,Celsius,0,1.0
+002,Punto 2-s1,05,Umidita,%,0,1.0
+002,Punto 2-s2,06,Temp,Celsius,0,1.0
+002,Punto 2-s2,07,Umidita,%,0,1.0
+003,Batteria P.003,20,Tens,V,0,14.76
+003,Punto 3-s1,04,Temp,Celsius,0,1.0
+003,Punto 3-s1,05,Umidita,%,0,1.0
+003,Punto 3-s2,06,Temp,Celsius,0,1.0
+003,Punto 3-s2,07,Umidita,%,0,1.0
+003,Tubo 1,00,Temp,Celsius,0,0.4
+004,Batteria P.004,20,Tens,V,0,14.76
+004,Punto 4-s1,04,Temp,Celsius,0,1.0
+004,Punto 4-s1,05,Umidita,%,0,1.0
+004,Punto 4-s2,06,Temp,Celsius,0,1.0
+004,Punto 4-s2,07,Umidita,%,0,1.0
+005,Batteria P.005,20,Tens,V,0,14.76
+005,Punto 5-s1,04,Temp,Celsius,0,1.0
+005,Punto 5-s1,05,Umidita,%,0,1.0
+005,Punto 5-s2,06,Temp,Celsius,0,1.0
+005,Punto 5-s2,07,Umidita,%,0,1.0
